# Enhanced-Customer-Churn-Analysis-with-ML-CLV-and-Explainability

./: .gitignore  INSTALL.md  README.md  RESUME_POINTS.md  config.py  pyproject.toml  requirements-minimal.txt  requirements-py313.txt  requirements.txt  setup.py  setup_environment.bat  setup_environment.sh  start_dashboard.sh  start_notebook.py
.kiro/specs/customer-churn-ml-pipeline/: design.md  requirements.md  tasks.md
dashboards/: .gitkeep  FINAL_STATUS.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  README.md  app.py  demo_mode.py  requirements.txt  run_dashboard.py  test_dashboard.py  test_error_handling.py
data/: .gitkeep
notebooks/: .gitkeep  01_eda.ipynb
reports/: .gitkeep
src/: __init__.py  data_prep.py  eda.py  evaluate.py  explain.py  features.py  segment.py  train.py
tests/: __init__.py  test_data_prep.py  test_evaluate.py  test_explain.py  test_features.py  test_segment.py  test_train.py
